commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: tdykstra
 description: Découvrez comment migrer un projet ASP.NET Core 2.2 vers ASP.NET Core 3.0.
 ms.author: tdykstra
 ms.custom: mvc
-ms.date: 05/09/2019
+ms.date: 05/10/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 7c47d042749ac3960c301ad918858e0375f4b2d0
-ms.sourcegitcommit: 20ca93d72cb0b3998637724b44523e57b089c8fd
+ms.openlocfilehash: 3b4192ff99776c7c04ac84c85b484c8a98a11ebf
+ms.sourcegitcommit: ffe3ed7921ec6c7c70abaac1d10703ec9a43374c
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 05/09/2019
-ms.locfileid: "65473585"
+ms.lasthandoff: 05/11/2019
+ms.locfileid: "65536052"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer d’ASP.NET Core 2.2 à 3.0
 
@@ -31,13 +31,27 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant 
 
 * Supprimez les `<PackageReference>` à la [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) ou [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) métapackage.
 
-* Mise à jour le `Version` sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, `3.0.0-preview-18579-0053`).
+* Mise à jour le `Version` attribut sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, `3.0.0-preview5-19227-01`).
 
-  S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0. Nombre d'entre eux font partie de `Microsoft.AspNetCore.App` et ne doit pas être référencées individuellement. Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [cesser de produire des packages pour les assemblys du framework partagé dans 3.0 (aspnet/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). Le *framework partagé* est le jeu d’assemblys (*.dll* fichiers) qui sont installés sur l’ordinateur et référencé par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+  S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0. La plupart de ces packages sont partie `Microsoft.AspNetCore.App` et ne doit pas être référencées individuellement. Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [cesser de produire des packages pour les assemblys du framework partagé dans 3.0 (aspnet/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). Le *framework partagé* est le jeu d’assemblys (*.dll* fichiers) qui sont installés sur l’ordinateur et référencé par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
-* Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0. Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [Microsoft.AspNetCore.App 3.0 en cours de suppression des assemblys (aspnet/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
+* Les assemblys pour plusieurs composants importants ont été supprimés `Microsoft.AspNetCore.App` 3.0. Ajouter `<PackageReference>` éléments si vous utilisez des API à partir de packages répertoriés dans [Microsoft.AspNetCore.App 3.0 en cours de suppression des assemblys (aspnet/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
 
-  Par exemple, `Microsoft.EntityFrameworkCore` et `System.Data.SqlClient` font partie n’est plus de `Microsoft.AspNetCore.App`. La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été déjà finalisées et changera avant la version RTM 3.0.
+  Voici quelques exemples de composants supprimés :
+
+  * `Microsoft.AspNet.WebApi.Client`
+  * `Microsoft.EntityFrameworkCore`
+  * `System.Data.SqlClient`
+
+  La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été finalisées et changera avant la version RTM 3.0.
+
+  Examinons le code ci-dessous.
+
+  ```csharp
+  var branches = await response.Content.ReadAsAsync<IEnumerable<GitHubBranch>>();
+  ```
+
+  Le `ReadAsAsync` méthode appelée dans le code précédent est inclus dans `Microsoft.AspNet.WebApi.Client`. Installer le [Microsoft.AspNet.WebApi.Client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) package NuGet pour résoudre le problème de compilation dans 3.0.
 
 * Ajouter [prise en charge de Json.NET](#jsonnet-support).
 
@@ -50,14 +64,14 @@ Dans le cadre du travail à [améliorer framework ASP.NET Core partagé](https:/
 Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :
 
 * Ajouter une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
-* Mise à jour `Startup.ConfigureServices` pour appeler `AddNewtonsoftJson()`.
+* Mise à jour `Startup.ConfigureServices` pour appeler `AddNewtonsoftJson`.
 
   ```csharp
   services.AddMvc()
       .AddNewtonsoftJson();
   ```
 
-  Permet de définir les paramètres de Newtonsoft avec `AddNewtonsoftJson`:
+  Paramètres de Json.NET peuvent être définis dans l’appel à `AddNewtonsoftJson`:
 
   ```csharp
   services.AddMvc()
