commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 ms.author: riande
 ms.custom: mvc
-ms.date: 12/04/2018
+ms.date: 05/13/2019
 uid: migration/20_21
-ms.openlocfilehash: 43e76bbe7f0d32a43126980999d44bb57f1caffc
-ms.sourcegitcommit: dd9c73db7853d87b566eef136d2162f648a43b85
+ms.openlocfilehash: 54c3ad73901cb140c1a1fb26579c2716f5cc3624
+ms.sourcegitcommit: 6afe57fb8d9055f88fedb92b16470398c4b9b24a
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 05/06/2019
-ms.locfileid: "65086112"
+ms.lasthandoff: 05/14/2019
+ms.locfileid: "65610254"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
@@ -39,7 +39,7 @@ Mettre à jour le fichier projet :
 
 * Modifier le framework cible pour .NET Core 2.1 en mettant à jour le fichier projet pour `<TargetFramework>netcoreapp2.1</TargetFramework>`.
 * Remplacez la référence de package pour `Microsoft.AspNetCore.All` avec une référence de package pour `Microsoft.AspNetCore.App`. Vous devrez peut-être ajouter des dépendances qui ont été supprimés de `Microsoft.AspNetCore.All`. Pour plus d’informations, consultez <xref:fundamentals/metapackage#migrate> et <xref:fundamentals/metapackage-app>.
-* Supprimez l’attribut « Version » sur la référence de package à `Microsoft.AspNetCore.App`. Les projets qui utilisent `<Project Sdk="Microsoft.NET.Sdk.Web">` n’avez pas besoin de définir la version. La version est impliquée par le framework cible et sélectionnée pour mieux correspondre à la façon dont ASP.NET Core 2.1 fonctionne. (Voir ci-dessous pour plus d’informations.)
+* Supprimez l’attribut « Version » sur la référence de package à `Microsoft.AspNetCore.App`. Des projets qui utilisent `<Project Sdk="Microsoft.NET.Sdk.Web">` n’avez pas besoin de définir la version. La version est impliquée par le framework cible et sélectionnée pour mieux correspondre à la façon dont ASP.NET Core 2.1 fonctionne. Pour plus d’informations, consultez le [règles pour les projets qui ciblent le framework partagé](#rules-for-projects-targeting-the-shared-framework) section.
 * Pour les applications qui ciblent le .NET Framework, mettez à jour chaque référence de package à la version 2.1.
 * Supprimer les références à **&lt;DotNetCliToolReference&gt;** éléments pour les packages suivants. Ces outils sont regroupés par défaut dans l’interface CLI .NET Core et n’avez pas besoin d’installer séparément.
   * Microsoft.DotNet.Watcher.Tools (`dotnet watch`)
