commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 ms.author: riande
 ms.custom: mvc
-ms.date: 05/13/2019
+ms.date: 06/09/2019
 uid: migration/20_21
-ms.openlocfilehash: 54c3ad73901cb140c1a1fb26579c2716f5cc3624
-ms.sourcegitcommit: 6afe57fb8d9055f88fedb92b16470398c4b9b24a
+ms.openlocfilehash: 7c81fefb559165880afb935ae46cf710e9ff5c43
+ms.sourcegitcommit: 9691b742134563b662948b0ed63f54ef7186801e
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 05/14/2019
-ms.locfileid: "65610254"
+ms.lasthandoff: 06/10/2019
+ms.locfileid: "66824806"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
@@ -59,7 +59,8 @@ Le balisage suivant montre le fichier de 2.1 projet modèle généré :
 
 ## <a name="rules-for-projects-targeting-the-shared-framework"></a>Règles pour les projets qui ciblent le framework partagé
 
-Un *framework partagé* est un ensemble d’assemblys (*.dll* fichiers) qui ne sont pas dans les dossiers de l’application. Le framework partagé doit être installé sur l’ordinateur pour exécuter l’application. Pour plus d’informations, consultez [framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+Un *framework partagé* est un ensemble d’assemblys (fichiers *.dll*) qui ne sont pas dans les dossiers de l’application. Le framework partagé doit être installé sur l’ordinateur pour exécuter l’application. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+
 ASP.NET Core 2.1 inclut les infrastructures partagées suivantes :
 
 * [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app)
@@ -173,11 +174,11 @@ Cette section décrit les étapes pour remplacer le code d’identité généré
 ### <a name="update-after-scaffolding-identity"></a>Mettre à jour après la génération de modèles automatique identité
 
 * Supprimer la génération de modèles automatique identité générée `IdentityDbContext` classe dérivée de la *zones/Identity/Data/* dossier.
-* Delete *Areas/Identity/IdentityHostingStartup.cs*
+* Supprimer *Areas/Identity/IdentityHostingStartup.cs*.
 * Mise à jour le  *\_LoginPartial.cshtml* fichier :
-  * Déplacer *Pages /\_LoginPartial.cshtml* à *Pages/Shared/\_LoginPartial.cshtml*
+  * Déplacer *Pages /\_LoginPartial.cshtml* à *Pages/Shared/\_LoginPartial.cshtml*.
   * Ajouter `asp-area="Identity"` aux liens d’ancrage et du formulaire.
-  * Mise à jour le `<form />` élément à `<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`
+  * Mise à jour le `<form />` élément à `<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`.
 
   Le code suivant illustre la mise à jour  *\_LoginPartial.cshtml* fichier :
 
@@ -192,15 +193,16 @@ Mise à jour `ConfigureServices` par le code suivant :
 ### <a name="the-layout-file"></a>Le fichier de disposition
 
 * Déplacer *Pages /\_Layout.cshtml* à *Pages/Shared/\_Layout.cshtml*
-* Le *Layout.cshtml* fichier intègre les modifications suivantes :
+* Dans *zones/Identity/Pages/\_ViewStart.cshtml*, modifier `Layout = "/Pages/_Layout.cshtml"` à `Layout = "/Pages/Shared/_Layout.cshtml"`.
+* Le  *\_Layout.cshtml* fichier intègre les modifications suivantes :
 
   * `<partial name="_CookieConsentPartial" />` est ajouté. Pour plus d’informations, consultez [Prise en charge du RGPD dans ASP.NET Core](xref:security/gdpr).
-  * jQuery remplace 2.2.0 3.3.1
+  * jQuery transforme 2.2.0 3.3.1.
 
 ### <a name="validationscriptspartialcshtml"></a>\_ValidationScriptsPartial.cshtml
 
-* *Pages /\_ValidationScriptsPartial.cshtml* déplace vers *Pages/Shared/\_ValidationScriptsPartial.cshtml*
-* *jQuery.Validate/1.14.0* devient *jquery.validate/1.17.0*
+* *Pages /\_ValidationScriptsPartial.cshtml* déplace vers *Pages/Shared/\_ValidationScriptsPartial.cshtml*.
+* *jQuery.Validate/1.14.0* devient *jquery.validate/1.17.0*.
 
 ### <a name="new-files"></a>Nouveaux fichiers
 
