commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: tdykstra
 description: Découvrez comment migrer un projet ASP.NET Core 2.2 vers ASP.NET Core 3.0.
 ms.author: tdykstra
 ms.custom: mvc
-ms.date: 05/10/2019
+ms.date: 06/17/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 3b4192ff99776c7c04ac84c85b484c8a98a11ebf
-ms.sourcegitcommit: ffe3ed7921ec6c7c70abaac1d10703ec9a43374c
+ms.openlocfilehash: abd31fa8ed27af230f347608f3e60f855a46b908
+ms.sourcegitcommit: 28a2874765cefe9eaa068dceb989a978ba2096aa
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 05/11/2019
-ms.locfileid: "65536052"
+ms.lasthandoff: 06/17/2019
+ms.locfileid: "67167123"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer d’ASP.NET Core 2.2 à 3.0
 
@@ -33,7 +33,7 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant 
 
 * Mise à jour le `Version` attribut sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, `3.0.0-preview5-19227-01`).
 
-  S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0. La plupart de ces packages sont partie `Microsoft.AspNetCore.App` et ne doit pas être référencées individuellement. Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [cesser de produire des packages pour les assemblys du framework partagé dans 3.0 (aspnet/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). Le *framework partagé* est le jeu d’assemblys (*.dll* fichiers) qui sont installés sur l’ordinateur et référencé par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+  S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0. La plupart de ces packages sont partie `Microsoft.AspNetCore.App` et ne doit pas être référencées individuellement. Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [cesser de produire des packages pour les assemblys du framework partagé dans 3.0 (aspnet/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). Le *framework partagé* est le jeu d’assemblys ( *.dll* fichiers) qui sont installés sur l’ordinateur et référencé par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
 * Les assemblys pour plusieurs composants importants ont été supprimés `Microsoft.AspNetCore.App` 3.0. Ajouter `<PackageReference>` éléments si vous utilisez des API à partir de packages répertoriés dans [Microsoft.AspNetCore.App 3.0 en cours de suppression des assemblys (aspnet/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
 
@@ -228,7 +228,7 @@ public class MyController : ControllerBase
 
 #### <a name="authorization"></a>Autorisation
 
-Dans les versions antérieures d’ASP.NET Core, la prise en charge de l’autorisation a été fourni par le `[Authorize]` attribut. Intergiciel (middleware) d’autorisation n’était pas disponible. Dans ASP.NET Core 3.0, l’intergiciel (middleware) d’autorisation est nécessaire. Nous vous recommandons de placer l’intergiciel (middleware) d’autorisation (`UseAuthentication`) immédiatement avant `UseAuthorization`. Intergiciel (middleware) d’autorisation peut également être configuré avec une stratégie par défaut, ce qui peut être remplacée.
+Dans les versions antérieures d’ASP.NET Core, la prise en charge de l’autorisation a été fourni par le `[Authorize]` attribut. Intergiciel (middleware) d’autorisation n’était pas disponible. Dans ASP.NET Core 3.0, l’intergiciel (middleware) d’autorisation est nécessaire. Nous vous recommandons de placer l’intergiciel de l’autorisation ASP.NET Core (`UseAuthorization`) immédiatement après `UseAuthentication`. L’intergiciel (middleware) d’autorisation peut également être configuré avec une stratégie par défaut, ce qui peut être remplacée.
 
 Dans ASP.NET Core 3.0 ou version ultérieure, `UseAuthorization` est appelée `Startup.Configure`et ce qui suit `HomeController` nécessite ouvert la session utilisateur :
 
