--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 06/17/2019
 uid: migration/22-to-30
-ms.openlocfilehash: abd31fa8ed27af230f347608f3e60f855a46b908
-ms.sourcegitcommit: 28a2874765cefe9eaa068dceb989a978ba2096aa
+ms.openlocfilehash: 7f78daeae1147adaa4711b60da71aa83ad939e63
+ms.sourcegitcommit: d6e51c60439f03a8992bda70cc982ddb15d3f100
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 06/17/2019
-ms.locfileid: "67167123"
+ms.lasthandoff: 07/03/2019
+ms.locfileid: "67555905"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer d’ASP.NET Core 2.2 à 3.0
 
@@ -19,7 +19,21 @@ Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twit
 
 Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0.
 
-[!INCLUDE[](~/includes/net-core-prereqs-all-3.0.md)]
+## <a name="prerequisites"></a>Prérequis
+
+# <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
+
+[!INCLUDE[](~/includes/net-core-prereqs-vs-3.0.md)]
+
+# <a name="visual-studio-codetabvisual-studio-code"></a>[Visual Studio Code](#tab/visual-studio-code)
+
+[!INCLUDE[](~/includes/net-core-prereqs-vsc-3.0.md)]
+
+# <a name="visual-studio-for-mactabvisual-studio-mac"></a>[Visual Studio pour Mac](#tab/visual-studio-mac)
+
+[!INCLUDE[](~/includes/net-core-prereqs-mac-3.0.md)]
+
+---
 
 ## <a name="update-the-project-file"></a>Mettre à jour le fichier projet
 
