commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 06/17/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 85f640d968b7b613f5cc8634e5d1ef1102c06e68
-ms.sourcegitcommit: 357a7120632b20465801c093e4e5bd4a315496a8
+ms.openlocfilehash: 1499239ae94919d1b094e6e55970d9920c4da2cd
+ms.sourcegitcommit: 8516b586541e6ba402e57228e356639b85dfb2b9
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 07/08/2019
-ms.locfileid: "67649249"
+ms.lasthandoff: 07/11/2019
+ms.locfileid: "67814867"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer d’ASP.NET Core 2.2 à 3.0
 
@@ -37,7 +37,7 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant 
 
 ## <a name="update-the-project-file"></a>Mettre à jour le fichier projet
 
-* Définir le [Moniker du Framework (TFM) cible](/dotnet/standard/frameworks#referring-to-frameworks) à `netcoreapp3.0`:
+* Définir le [Moniker du Framework (TFM) cible](/dotnet/standard/frameworks) à `netcoreapp3.0`:
 
   ```xml
   <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -251,7 +251,7 @@ public class MyController : ControllerBase
 }
 ```
 
-#### <a name="authorization"></a>Autorisation
+#### <a name="authorization"></a>Authorization
 
 Dans les versions antérieures d’ASP.NET Core, la prise en charge de l’autorisation a été fourni par le `[Authorize]` attribut. Intergiciel (middleware) d’autorisation n’était pas disponible. Dans ASP.NET Core 3.0, l’intergiciel (middleware) d’autorisation est nécessaire. Nous vous recommandons de placer l’intergiciel de l’autorisation ASP.NET Core (`UseAuthorization`) immédiatement après `UseAuthentication`. L’intergiciel (middleware) d’autorisation peut également être configuré avec une stratégie par défaut, ce qui peut être remplacée.
 
