commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 06/17/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 1499239ae94919d1b094e6e55970d9920c4da2cd
-ms.sourcegitcommit: 8516b586541e6ba402e57228e356639b85dfb2b9
+ms.openlocfilehash: 13108732042244764d5c134771f701030630a260
+ms.sourcegitcommit: 040aedca220ed24ee1726e6886daf6906f95a028
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 07/11/2019
-ms.locfileid: "67814867"
+ms.lasthandoff: 07/15/2019
+ms.locfileid: "67892883"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer d’ASP.NET Core 2.2 à 3.0
 
@@ -531,4 +531,4 @@ Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas pris 
 
 ## <a name="opt-in-to-runtime-compilation"></a>S’abonner à la compilation pour le runtime
 
-Dans 3.0, la compilation pour le runtime est un scénario opt-in. Pour activer la compilation pour le runtime, consultez <xref:mvc/views/view-compilation#runtime-compilation>.
+Dans 3.0, la compilation pour le runtime est un scénario opt-in. Pour activer la compilation pour le runtime, consultez https://docs.microsoft.com/aspnet/core/mvc/views/view-compilation?view=aspnetcore-3.0#runtime-compilation.
