--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -1,23 +1,23 @@
 ---
-title: Migrer d’ASP.NET Core 2.2 à 3.0 Preview
+title: Migrer de ASP.NET Core 2,2 vers la version préliminaire 3,0
 author: tdykstra
-description: Découvrez comment migrer un projet ASP.NET Core 2.2 vers ASP.NET Core 3.0.
+description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: tdykstra
 ms.custom: mvc
-ms.date: 06/17/2019
+ms.date: 07/29/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 13108732042244764d5c134771f701030630a260
-ms.sourcegitcommit: 040aedca220ed24ee1726e6886daf6906f95a028
+ms.openlocfilehash: 4e20e4248957e3db796c7bbf85baf94fa263955b
+ms.sourcegitcommit: 7001657c00358b082734ba4273693b9b3ed35d2a
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 07/15/2019
-ms.locfileid: "67892883"
+ms.lasthandoff: 07/31/2019
+ms.locfileid: "68670059"
 ---
-# <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer d’ASP.NET Core 2.2 à 3.0
+# <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
 Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twitter.com/RickAndMSFT)
 
-Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0.
+Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant vers ASP.NET Core 3,0.
 
 ## <a name="prerequisites"></a>Prérequis
 
@@ -37,27 +37,29 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant 
 
 ## <a name="update-the-project-file"></a>Mettre à jour le fichier projet
 
-* Définir le [Moniker du Framework (TFM) cible](/dotnet/standard/frameworks) à `netcoreapp3.0`:
+* Définissez le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) sur `netcoreapp3.0`:
 
   ```xml
   <TargetFramework>netcoreapp3.0</TargetFramework>
   ```
 
-* Supprimez les `<PackageReference>` à la [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) ou [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) métapackage.
+* Supprimez `<PackageReference>` l’un des sous-packages [Microsoft. AspNetCore. All](xref:fundamentals/metapackage) ou [Microsoft. AspNetCore. app](xref:fundamentals/metapackage-app) .
 
-* Mise à jour le `Version` attribut sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, `3.0.0-preview5-19227-01`).
+* Supprimez `<PackageReference>` tout dans le package [Microsoft. AspNetCore. Razor. Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) .
 
-  S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0. La plupart de ces packages sont partie `Microsoft.AspNetCore.App` et ne doit pas être référencées individuellement. Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [cesser de produire des packages pour les assemblys du framework partagé dans 3.0 (aspnet/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). Le *framework partagé* est le jeu d’assemblys ( *.dll* fichiers) qui sont installés sur l’ordinateur et référencé par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+* Met à `Version` jour l’attribut `<PackageReference>` sur les `Microsoft.AspNetCore.*` éléments restants pour les packages vers l' `3.0.0-preview5-19227-01`aperçu actuel (par exemple,).
 
-* Les assemblys pour plusieurs composants importants ont été supprimés `Microsoft.AspNetCore.App` 3.0. Ajouter `<PackageReference>` éléments si vous utilisez des API à partir de packages répertoriés dans [Microsoft.AspNetCore.App 3.0 en cours de suppression des assemblys (aspnet/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
+  S’il n’existe aucune version 3,0 d’un package, le package peut avoir été déconseillé dans 3,0. Un grand nombre de ces packages font `Microsoft.AspNetCore.App` partie de et ne doivent pas être référencés individuellement. Pour obtenir une liste préliminaire des packages qui ne sont plus produits dans 3,0, consultez [arrêter la production de packages pour les assemblys de Framework partagé dans 3,0 (ASPNET/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et référencés par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
-  Voici quelques exemples de composants supprimés :
+* Les assemblys de plusieurs composants notables ont été `Microsoft.AspNetCore.App` supprimés de dans 3,0. Ajoutez `<PackageReference>` des éléments si vous utilisez des API à partir de packages listés dans des [assemblys en cours de suppression de Microsoft. AspNetCore. app 3,0 (ASPNET/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
+
+  Voici quelques exemples de composants supprimés:
 
   * `Microsoft.AspNet.WebApi.Client`
   * `Microsoft.EntityFrameworkCore`
   * `System.Data.SqlClient`
 
-  La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été finalisées et changera avant la version RTM 3.0.
+  La liste des assemblys en cours `Microsoft.AspNetCore.App` d’expédition n’a pas été finalisée et sera modifiée avant 3,0 RTM.
 
   Examinons le code ci-dessous.
 
@@ -65,27 +67,27 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant 
   var branches = await response.Content.ReadAsAsync<IEnumerable<GitHubBranch>>();
   ```
 
-  Le `ReadAsAsync` méthode appelée dans le code précédent est inclus dans `Microsoft.AspNet.WebApi.Client`. Installer le [Microsoft.AspNet.WebApi.Client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) package NuGet pour résoudre le problème de compilation dans 3.0.
+  La `ReadAsAsync` méthode appelée dans le code précédent est incluse dans `Microsoft.AspNet.WebApi.Client`. Installez le package NuGet [Microsoft. Aspnet. WebApi. client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) pour résoudre le problème de compilation dans 3,0.
 
-* Ajouter [prise en charge de Json.NET](#jsonnet-support).
+* Ajoutez la [prise en charge de JSON.net](#jsonnet-support).
 
-* Projets par défaut pour le [modèle d’hébergement intra-processus](xref:host-and-deploy/aspnet-core-module#in-process-hosting-model) dans ASP.NET Core 3.0 ou version ultérieure. Vous pouvez éventuellement supprimer le `<AspNetCoreHostingModel>` propriété dans le fichier projet si sa valeur est `InProcess`.
+* Les projets sont par défaut du [modèle d’hébergement in-process](xref:host-and-deploy/aspnet-core-module#in-process-hosting-model) dans ASP.net Core 3,0 ou version ultérieure. Vous pouvez éventuellement supprimer la `<AspNetCoreHostingModel>` propriété dans le fichier projet si sa valeur est. `InProcess`
 
-## <a name="jsonnet-support"></a>Prise en charge de Json.NET
+## <a name="jsonnet-support"></a>Support Json.NET
 
-Dans le cadre du travail à [améliorer framework ASP.NET Core partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de l’infrastructure partagée ASP.NET Core.
+Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [JSON.net](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de la ASP.net Core Framework partagé.
 
-Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :
+Pour utiliser Json.NET dans un projet ASP.NET Core 3,0:
 
-* Ajouter une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
-* Mise à jour `Startup.ConfigureServices` pour appeler `AddNewtonsoftJson`.
+* Ajoutez une référence de package à [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
+* Mettez `Startup.ConfigureServices` à jour `AddNewtonsoftJson`pour appeler.
 
   ```csharp
   services.AddMvc()
       .AddNewtonsoftJson();
   ```
   
-  `AddNewtonsoftJson` est compatible avec les nouvelles méthodes d’inscription de service MVC :
+  `AddNewtonsoftJson`est compatible avec les nouvelles méthodes d’inscription de service MVC:
 
   * `AddRazorPages`
   * `AddControllersWithViews`
@@ -96,7 +98,7 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :
       .AddNewtonsoftJson();
   ```
 
-  Paramètres de Json.NET peuvent être définis dans l’appel à `AddNewtonsoftJson`:
+  Les paramètres Json.NET peuvent être définis dans l’appel `AddNewtonsoftJson`à:
 
   ```csharp
   services.AddMvc()
@@ -105,13 +107,13 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :
                 new CamelCasePropertyNamesContractResolver());
   ```
 
-## <a name="mvc-service-registration"></a>Inscription du service de MVC
+## <a name="mvc-service-registration"></a>Inscription du service MVC
 
-ASP.NET Core 3.0 ajoute de nouvelles options pour l’inscription des scénarios MVC à l’intérieur de `Startup.ConfigureServices`.
+ASP.NET Core 3,0 ajoute de nouvelles options pour l’inscription de `Startup.ConfigureServices`scénarios MVC dans.
 
-Trois nouvelles méthodes d’extension de niveau supérieur relatives aux scénarios MVC sur `IServiceCollection` sont disponibles. Les modèles utilisent ces nouvelles méthodes au lieu de `UseMvc`. Toutefois, `AddMvc` continue à se comporter comme il a dans les versions précédentes.
+Trois nouvelles méthodes d’extension de niveau supérieur liées aux scénarios MVC `IServiceCollection` sur sont disponibles. Les modèles utilisent ces nouvelles méthodes à `UseMvc`la place de. Toutefois, `AddMvc` continue à se comporter comme dans les versions précédentes.
 
-L’exemple suivant ajoute la prise en charge pour les contrôleurs et fonctionnalités API, mais pas les vues ou pages. Le modèle d’API utilise ce code :
+L’exemple suivant ajoute la prise en charge des contrôleurs et des fonctionnalités liées à l’API, mais pas aux vues ou aux pages. Le modèle d’API utilise ce code:
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -120,7 +122,7 @@ public void ConfigureServices(IServiceCollection services)
 }
 ```
 
-L’exemple suivant ajoute la prise en charge des contrôleurs, API-fonctionnalités et les vues, mais pas les pages. Le modèle d’Application Web (MVC) utilise ce code :
+L’exemple suivant ajoute la prise en charge des contrôleurs, des fonctionnalités liées à l’API et des vues, mais pas des pages. Le modèle d’application Web (MVC) utilise ce code:
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -129,7 +131,7 @@ public void ConfigureServices(IServiceCollection services)
 }
 ```
 
-L’exemple suivant ajoute la prise en charge pour les Pages Razor et prise en charge du contrôleur minimal. Le modèle d’Application Web utilise ce code :
+L’exemple suivant ajoute la prise en charge de Razor Pages et de la prise en charge minimale du contrôleur. Le modèle d’application Web utilise ce code:
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -138,7 +140,7 @@ public void ConfigureServices(IServiceCollection services)
 }
 ```
 
-Les nouvelles méthodes peuvent également être combinées. L’exemple suivant est équivalent à l’appel `AddMvc` dans ASP.NET Core 2.2 : 
+Les nouvelles méthodes peuvent également être combinées. L’exemple suivant est équivalent à l' `AddMvc` appel de dans ASP.net Core 2,2: 
 
 ```csharp
 public void ConfigureServices(IServiceCollection services)
@@ -150,27 +152,27 @@ public void ConfigureServices(IServiceCollection services)
 
 ## <a name="update-routing-startup-code"></a>Mettre à jour le code de démarrage du routage
 
-Si une application appelle `UseMvc` ou `UseSignalR`, migrer l’application à [routage de point de terminaison](xref:fundamentals/routing) si possible. Pour améliorer la compatibilité de routage de point de terminaison avec les versions précédentes de MVC, nous avons rétabli certaines modifications dans la génération d’URL introduite dans ASP.NET Core 2.2. Si vous avez rencontré des problèmes à l’aide de routage de point de terminaison dans 2.2, attendre des améliorations dans ASP.NET Core 3.0 avec les exceptions suivantes :
+Si une application appelle `UseMvc` ou `UseSignalR`, migrez l’application vers le [routage des points de terminaison](xref:fundamentals/routing) , si possible. Pour améliorer la compatibilité du routage des points de terminaison avec les versions précédentes de MVC, nous avons rétabli certaines des modifications apportées à la génération d’URL introduites dans ASP.NET Core 2,2. Si vous avez rencontré des problèmes lors de l’utilisation du routage de point de terminaison dans 2,2, attendez-vous à des améliorations de ASP.NET Core 3,0, avec les exceptions suivantes:
 
-* Si l’application implémente `IRouter` ou hérite `Route`, vous pouvez souhaiter éviter la migration pour l’instant. Fournir des commentaires à [planifier la migration des implémentations IRouter basé sur le point de terminaison de routage](https://github.com/aspnet/AspNetCore/issues/4221).
+* Si l’application implémente `IRouter` ou hérite de `Route`, vous souhaiterez peut-être éviter la migration à ce stade. Fournir des commentaires au [plan de la migration des implémentations basées sur IRouter sur le routage des points de terminaison](https://github.com/aspnet/AspNetCore/issues/4221).
 
-* Si l’application accède directement à `RouteData.Routers` à l’intérieur de MVC, vous pouvez souhaiter éviter la migration pour l’instant. Fournir des commentaires à [conseils de Migration pour l’utilisation de RouteData.Routers](https://github.com/aspnet/AspNetCore/issues/9148).
+* Si l’application accède `RouteData.Routers` directement à MVC, vous souhaiterez peut-être éviter la migration à ce stade. Fournissez des commentaires lors [de la migration pour l’utilisation de RouteData. routeurs](https://github.com/aspnet/AspNetCore/issues/9148).
 
-Routage de point de terminaison prend en charge la même syntaxe de modèle d’itinéraire et la création de fonctionnalités en tant que modèle d’itinéraire `IRouter`. Prend en charge du routage de point de terminaison `IRouteContraint`. Prend en charge du routage de point de terminaison `[Route]`, `[HttpGet]`et les autres attributs de routage MVC.
+Le routage des points de terminaison prend en charge les mêmes syntaxe de modèle d' `IRouter`itinéraire et fonctionnalités de création de modèle de routage que. Le routage des `IRouteContraint`points de terminaison prend en charge. Le routage des `[Route]`points `[HttpGet]`de terminaison prend en charge, et les autres attributs de routage Mvc.
 
-Pour la plupart des applications, uniquement `Startup` nécessite des modifications.
+Pour la plupart des applications `Startup` , nécessite uniquement des modifications.
 
-### <a name="migrate-startupconfigure"></a>Migrer Startup.Configure
+### <a name="migrate-startupconfigure"></a>Migrer Startup. configure
 
-Conseils généraux :
+Conseils généraux:
 
-* Ajouter `UseRouting`. 
-* Si l’application appelle `UseStaticFiles`, placez `UseStaticFiles` **avant** `UseRouting`.
-* Si l’application utilise les fonctionnalités d’authentification/autorisation telle que `AuthorizePage` ou `[Authorize]`, placez l’appel à `UseAuthentication` et `UseAuthorization` **après** `UseRouting`.
-* Si l’application utilise [CORS](xref:security/cors) fonctionnalités, telles que `[EnableCors]`, placez `UseCors` suivant.
-* Remplacez `UseMvc` ou `UseSignalR` avec `UseEndpoints`.
+* Ajoutez `UseRouting`. 
+* Si l’application appelle `UseStaticFiles`, placez `UseStaticFiles` -la **avant** `UseRouting`.
+* Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization` appel à et **après** `UseRouting`.
+* Si l’application utilise des fonctionnalités [cors](xref:security/cors) , telles `[EnableCors]`que, `UseCors` placer suivant.
+* Remplacez `UseMvc` ou `UseSignalR` par .`UseEndpoints`
 
-Voici un exemple de `Startup.Configure` dans une application ASP.NET Core 2.2 classique :
+Voici un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -193,7 +195,7 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-Après la mise à jour précédente `Startup.Configure` code :
+Après la mise à jour `Startup.Configure` du code précédent:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -216,18 +218,18 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-### <a name="security-middleware-guidance"></a>Conseils de sécurité intergiciel (middleware)
+### <a name="security-middleware-guidance"></a>Aide sur le middleware de sécurité
 
-Prise en charge pour l’autorisation et CORS est unifiée autour de la [intergiciel (middleware)](xref:fundamentals/middleware/index) approche. Cela permet l’utilisation de l’intergiciel (middleware) même et les fonctionnalités dans ces scénarios. Un intergiciel (middleware) d’autorisation de mise à jour est fourni dans cette version, et intergiciel (middleware) CORS a été amélioré afin qu’il puisse comprendre les attributs utilisés par les contrôleurs MVC.
+La prise en charge de l’autorisation et de CORS est unifiée autour de l’approche de l' [intergiciel (middleware](xref:fundamentals/middleware/index) ). Cela permet d’utiliser les mêmes intergiciels et fonctionnalités dans ces scénarios. Un intergiciel (middleware) d’autorisation mis à jour est fourni dans cette version, et l’intergiciel (middleware) CORS est amélioré afin de pouvoir comprendre les attributs utilisés par les contrôleurs MVC.
 
 #### <a name="cors"></a>CORS
 
-Auparavant, CORS peut être difficile à configurer. Intergiciel (middleware) a été fourni pour utilisation dans certains cas d’utilisation, mais les filtres MVC ont été destinés à être utilisé **sans** l’intergiciel (middleware) dans d’autres cas d’usage. Avec ASP.NET Core 3.0, nous recommandons que toutes les applications qui nécessitent des CORS utiliser l’intergiciel (middleware) CORS en tandem avec le point de terminaison de routage. `UseCors` peut être fourni avec une stratégie par défaut, et `[EnableCors]` et `[DisableCors]` attributs peuvent être utilisés pour remplacer la stratégie par défaut si nécessaire. 
+Auparavant, CORS pouvait être difficile à configurer. L’intergiciel était fourni pour une utilisation dans certains cas d’utilisation, mais les filtres MVC devaient être utilisés **sans** l’intergiciel dans d’autres cas d’usage. Avec ASP.NET Core 3,0, nous recommandons que toutes les applications qui requièrent CORS utilisent l’intergiciel (middleware) CORS en tandem avec le routage du point de terminaison. `UseCors`peut être fourni avec une stratégie par défaut, `[EnableCors]` et `[DisableCors]` les attributs et peuvent être utilisés pour remplacer la stratégie par défaut si nécessaire. 
 
 Dans l’exemple suivant :
 
-* CORS est activé pour tous les points de terminaison avec le `default` stratégie nommée.
-* Le `MyController` classe désactive CORS avec le `[DisableCors]` attribut.
+* CORS est activé pour tous les points de terminaison `default` avec la stratégie nommée.
+* La `MyController` classe désactive cors avec l' `[DisableCors]` attribut.
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -253,9 +255,9 @@ public class MyController : ControllerBase
 
 #### <a name="authorization"></a>Authorization
 
-Dans les versions antérieures d’ASP.NET Core, la prise en charge de l’autorisation a été fourni par le `[Authorize]` attribut. Intergiciel (middleware) d’autorisation n’était pas disponible. Dans ASP.NET Core 3.0, l’intergiciel (middleware) d’autorisation est nécessaire. Nous vous recommandons de placer l’intergiciel de l’autorisation ASP.NET Core (`UseAuthorization`) immédiatement après `UseAuthentication`. L’intergiciel (middleware) d’autorisation peut également être configuré avec une stratégie par défaut, ce qui peut être remplacée.
+Dans les versions antérieures de ASP.net Core, la prise en charge de `[Authorize]` l’autorisation a été fournie via l’attribut. L’intergiciel d’autorisation n’est pas disponible. Dans ASP.NET Core 3,0, l’intergiciel (middleware) d’autorisation est requis. Nous vous recommandons de placer le ASP.net Core middleware d'`UseAuthorization`autorisation () `UseAuthentication`immédiatement après. L’intergiciel d’autorisation peut également être configuré avec une stratégie par défaut, qui peut être remplacée.
 
-Dans ASP.NET Core 3.0 ou version ultérieure, `UseAuthorization` est appelée `Startup.Configure`et ce qui suit `HomeController` nécessite ouvert la session utilisateur :
+Dans ASP.net Core 3,0 ou version ultérieure `UseAuthorization` , est appelé `Startup.Configure`dans, et les `HomeController` éléments suivants requièrent un utilisateur connecté:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -283,9 +285,9 @@ public class HomeController : ControllerBase
 }
 ```
 
-Si l’application utilise un `AuthorizeFilter` comme un filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie pour le `UseAuthorization` intergiciel (middleware).
+Si l’application utilise un `AuthorizeFilter` comme filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie à `UseAuthorization` l’intergiciel (middleware).
 
-Dans l’exemple suivant, une stratégie personnalisée à appliquer à toutes les demandes quand `UseAuthorization` est appelée et le `HomeController` autorise l’accès sans que l’utilisateur de connexion à l’application :
+Dans l’exemple suivant, une stratégie personnalisée à appliquer à toutes les demandes lorsque `UseAuthorization` est appelé, et le `HomeController` autorise l’accès sans que l’utilisateur se connecte à l’application:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -310,9 +312,9 @@ public class HomeController : ControllerBase
 }
 ```
 
-Autorisation de l’intergiciel (middleware) fonctionne sans l’infrastructure n’aient connaissance spécifique de l’autorisation. Par exemple, [vérifications d’intégrité](xref:host-and-deploy/health-checks) n’a aucune connaissance spécifique de l’autorisation, mais les contrôles d’intégrité peuvent avoir une stratégie d’autorisation configurable appliquée par l’intergiciel (middleware).
+L’autorisation par intergiciel fonctionne sans que l’infrastructure ait une connaissance spécifique de l’autorisation. Par exemple, les [contrôles d’intégrité](xref:host-and-deploy/health-checks) n’ont aucune connaissance spécifique de l’autorisation, mais les contrôles d’intégrité peuvent avoir une stratégie d’autorisation configurable appliquée par l’intergiciel (middleware).
 
-Dans l’exemple suivant, `UseAuthorization` traite d’autorisation sans une stratégie par défaut, mais la `/healthz` point de terminaison de vérification d’intégrité, l’utilisateur doit se trouver dans le `admin` rôle : 
+Dans l’exemple suivant, `UseAuthorization` traite l’autorisation sans une stratégie par défaut, `/healthz` mais le point de terminaison de contrôle d’intégrité requiert `admin` que l’utilisateur soit dans le rôle: 
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -333,15 +335,15 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-Implémentation de la protection pour certains scénarios. `UseEndpoint` intergiciel (middleware) lève une exception si une autorisation ou une stratégie CORS est ignorée en raison de l’intergiciel (middleware) manquant. La prise en charge de l’analyseur pour fournir des commentaires supplémentaires sur une configuration incorrecte sont en cours.
+La protection est implémentée pour certains scénarios. `UseEndpoint`l’intergiciel (middleware) lève une exception si une stratégie d’autorisation ou CORS est ignorée en raison d’un intergiciel (middleware) manquant. La prise en charge de l’analyseur pour fournir des commentaires supplémentaires sur une configuration incompatible est en cours.
 
-### <a name="migrate-signalr"></a>Migrer de SignalR
+### <a name="migrate-signalr"></a>Migrer Signalr
 
-Le mappage de concentrateurs SignalR maintenant a lieu à l’intérieur de `UseEndpoints`. 
+Le mappage des hubs Signalr est désormais effectué `UseEndpoints`à l’intérieur de. 
 
-Mapper chaque hub avec `MapHub`. Comme dans les versions précédentes, chaque concentrateur est explicitement répertorié.
+Mappez chaque concentrateur avec `MapHub`. Comme dans les versions précédentes, chaque concentrateur est explicitement listé.
 
-Dans l’exemple suivant, la prise en charge pour le `ChatHub` concentrateur SignalR est ajoutée :
+Dans l’exemple suivant, la prise en `ChatHub` charge du Hub signalr est ajoutée:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -359,22 +361,22 @@ public void Configure(IApplicationBuilder app)
 
 ### <a name="migrate-mvc-controllers"></a>Migrer des contrôleurs MVC
 
-Le mappage des contrôleurs maintenant a lieu à l’intérieur de `UseEndpoints`. 
+Le mappage de contrôleurs a désormais `UseEndpoints`lieu à l’intérieur de. 
 
-Ajouter `MapControllers` si l’application utilise le routage par attributs. Étant donné que le routage inclut la prise en charge de nombreuses infrastructures dans ASP.NET Core 3.0 ou version ultérieure, l’ajout de contrôleurs routées par l’attribut est participer. 
+Ajoutez `MapControllers` si l’application utilise le routage d’attributs. Dans la mesure où le routage inclut la prise en charge de nombreuses infrastructures dans ASP.NET Core 3,0 ou version ultérieure, l’ajout de contrôleurs routés par attribut est un abonnement. 
 
-Remplacez les éléments suivants :
+Remplacez ce qui suit:
 
-* `MapRoute` Avec `MapControllerRoute`
-* `MapAreaRoute` Avec `MapAreaControllerRoute`
+* `MapRoute`avec`MapControllerRoute`
+* `MapAreaRoute`avec`MapAreaControllerRoute`
 
-Étant donné que le routage maintenant inclut la prise en charge de plus que MVC, la terminologie a changé pour rendre ces méthodes indiquent clairement ce qu’ils font. Les routes conventionnelles comme `MapControllerRoute` / `MapAreaControllerRoute` / `MapDefaultControllerRoute` sont appliquées dans l’ordre qu’ils sont ajoutés. Placer en premier les itinéraires plus spécifiques (par exemple, les itinéraires pour une zone).
+Étant donné que le routage inclut désormais une prise en charge de plus que MVC, la terminologie a changé pour indiquer clairement ce qu’ils font. Les itinéraires conventionnels `MapControllerRoute` tels que / `MapAreaControllerRoute` / sont appliquésdansl’ordredanslequelilssontajoutés.`MapDefaultControllerRoute` Placez d’abord des itinéraires plus spécifiques (tels que des itinéraires pour une zone).
 
 Dans l’exemple suivant :
 
-* `MapControllers` Ajoute la prise en charge des contrôleurs routées par l’attribut.
-* `MapAreaControllerRoute` Ajoute une route conventionnelle pour les contrôleurs dans une zone.
-* `MapControllerRoute` Ajoute une route conventionnelle pour les contrôleurs.
+* `MapControllers`Ajoute la prise en charge des contrôleurs routés par attribut.
+* `MapAreaControllerRoute`Ajoute une route conventionnelle pour les contrôleurs dans une zone.
+* `MapControllerRoute`Ajoute une route conventionnelle pour les contrôleurs.
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -396,13 +398,13 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-### <a name="migrate-razor-pages"></a>Migrer des Pages Razor
+### <a name="migrate-razor-pages"></a>Migrer Razor Pages
 
-Mappage des Pages Razor maintenant a lieu à l’intérieur de `UseEndpoints`.
+Le mappage de Razor Pages a maintenant `UseEndpoints`lieu à l’intérieur de.
 
-Ajouter `MapRazorPages` si l’application utilise les Pages Razor. Étant donné que le routage de point de terminaison comprend la prise en charge pour la plupart des infrastructures, l’ajout de que pages Razor est désormais participer.
+Ajoutez `MapRazorPages` si l’application utilise Razor pages. Dans la mesure où le routage des points de terminaison inclut la prise en charge de nombreuses infrastructures, l’ajout de Razor Pages est désormais un abonnement.
 
-Dans l’exemple suivant, `MapRazorPages` ajoute la prise en charge pour les Pages Razor :
+Dans l’exemple suivant, `MapRazorPages` ajoute la prise en charge de Razor pages:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -420,9 +422,9 @@ public void Configure(IApplicationBuilder app)
 
 ### <a name="use-mvc-without-endpoint-routing"></a>Utiliser MVC sans routage de point de terminaison
 
-À l’aide de MVC via `UseMvc` ou `UseMvcWithDefaultRoute` dans ASP.NET Core 3.0 nécessite explicite participer à l’intérieur de `Startup.ConfigureServices`. Cela est nécessaire, car MVC doit savoir si se fier à l’autorisation et l’intergiciel (middleware) CORS pendant l’initialisation. Un analyseur est fournie qui vous avertit si l’application tente d’utiliser une configuration non prise en charge.
+L’utilisation de `UseMvc` MVC `UseMvcWithDefaultRoute` via ou dans ASP.net Core 3,0 requiert un abonnement explicite à `Startup.ConfigureServices`l’intérieur de. Cela est nécessaire, car MVC doit savoir s’il peut reposer sur l’autorisation et l’intergiciel CORS pendant l’initialisation. Un analyseur est fourni pour avertir si l’application tente d’utiliser une configuration non prise en charge.
 
-Si l’application requiert hérité `IRouter` prennent en charge, désactivez `EnableEndpointRouting` en utilisant l’une de ces approches dans `Startup.ConfigureServices`:
+Si l’application nécessite une `IRouter` prise en charge `EnableEndpointRouting` héritée, désactivez l' `Startup.ConfigureServices`une des approches suivantes dans:
 
 ```csharp
 services.AddMvc(options => options.EnableEndpointRouting = false);
@@ -441,13 +443,13 @@ services.AddControllersWithViews(options => options.EnableEndpointRouting = fals
 services.AddRazorPages().AddMvcOptions(options => options.EnableEndpointRouting = false);
 ```
 
-### <a name="migrate-health-checks"></a>Migrer des contrôles d’intégrité
+### <a name="migrate-health-checks"></a>Migrer les contrôles d’intégrité
 
-Contrôles d’intégrité peuvent être utilisées comme un *routeur des logiciels espions* avec le routage de point de terminaison.
+Les contrôles d’intégrité peuvent être utilisés en tant que *routeur* avec routage des points de terminaison.
 
-Ajouter `MapHealthChecks` à utiliser le contrôle d’intégrité vérifie avec le routage de point de terminaison. Le `MapHealthChecks` méthode accepte des arguments similaire à `UseHealthChecks`. L’avantage d’utiliser `MapHealthChecks` sur `UseHealthChecks` est la possibilité d’appliquer d’autorisation et d’avoir un meilleur contrôle affiné sur la stratégie de correspondance. 
+Ajoutez `MapHealthChecks` pour utiliser les vérifications d’intégrité avec routage du point de terminaison. La `MapHealthChecks` méthode accepte des arguments similaires `UseHealthChecks`à. L’avantage de l' `MapHealthChecks` utilisation `UseHealthChecks` de la valeur on est la possibilité d’appliquer une autorisation et d’avoir un contrôle plus précis de la stratégie de correspondance. 
 
-Dans l’exemple suivant, `MapHealthChecks` est appelée pour un point de terminaison de vérification d’intégrité à `/healthz`:
+Dans l’exemple suivant, `MapHealthChecks` est appelé pour un point de terminaison de `/healthz`contrôle d’intégrité sur:
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -465,28 +467,28 @@ public void Configure(IApplicationBuilder app)
 
 ## <a name="hostbuilder-replaces-webhostbuilder"></a>HostBuilder remplace WebHostBuilder
 
-Les modèles ASP.NET Core 3.0 utilisent [hôte générique](xref:fundamentals/host/generic-host). Les versions précédentes utilisées [hôte Web](xref:fundamentals/host/web-host). Le code suivant montre le modèle ASP.NET Core 3.0 généré `Program` classe :
+Les modèles ASP.NET Core 3,0 utilisent l' [hôte générique](xref:fundamentals/host/generic-host). Les versions précédentes utilisaient l' [hôte Web](xref:fundamentals/host/web-host). Le code suivant illustre la classe générée `Program` par le modèle ASP.net Core 3,0:
 
 [!code-csharp[](22-to-30/samples/Program.cs?name=snippet)]
 
-Le code suivant montre la 2.2 Core ASP.NET modèle généré `Program` classe :
+Le code suivant illustre la classe ASP.net Core 2,2 générée `Program` par le modèle:
 
 [!code-csharp[](22-to-30/samples/Program2.2.cs?name=snippet)]
 
-<xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> reste dans 3.0 et est le type de la `webBuilder` vu dans l’exemple de code précédent. <xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> sera déconseillée dans une version ultérieure et remplacé par `HostBuilder`.
+<xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder>reste dans 3,0 et est le type de la `webBuilder` vue dans l’exemple de code précédent. <xref:Microsoft.AspNetCore.Hosting.WebHostBuilder>sera dépréciée dans une version ultérieure et remplacée par `HostBuilder`.
 
-La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration> et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans `Startup`du constructeur. Le `HostBuilder` les contraintes de l’injection de dépendances :
+La modification la plus significative `WebHostBuilder` de `HostBuilder` en est l' [injection de dépendances (di)](xref:fundamentals/dependency-injection). Lorsque vous `HostBuilder`utilisez, vous pouvez uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration> injecter `Startup`et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur de. Contraintes `HostBuilder` di:
 
-* Activer le conteneur d’injection de dépendance à générer qu’une seule fois.
-* Permet d’éviter les problèmes de durée de vie objet résultant comme la résolution de plusieurs instances de singletons.
+* Autorisez la génération du conteneur DI une seule fois.
+* Évite les problèmes de durée de vie des objets résultants, tels que la résolution de plusieurs instances de singletons.
 
-## <a name="update-signalr-code"></a>Mettre à jour le code de SignalR
+## <a name="update-signalr-code"></a>Mettre à jour le code Signalr
 
-`System.Text.Json` est désormais la valeur par défaut Hub protocole utilisé par le client et le serveur.
+`System.Text.Json`est maintenant le protocole de concentrateur par défaut utilisé par le client et le serveur.
 
-Dans `Startup.ConfigureServices`, appelez `AddJsonProtocol` pour définir les options de sérialiseur.
+Dans `Startup.ConfigureServices`, appelez `AddJsonProtocol` pour définir les options du sérialiseur.
 
-**Serveur :**
+**Serveurs**
 
 ```csharp
 services.AddSignalR(...)
@@ -508,12 +510,12 @@ new HubConnectionBuilder()
     .Build();
 ```
 
-### <a name="switch-to-newtonsoftjson"></a>Basculez vers Newtonsoft.Json
+### <a name="switch-to-newtonsoftjson"></a>Basculer vers Newtonsoft. JSON
 
-Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas pris en charge dans `System.Text.Json`, vous pouvez basculer vers `Newtonsoft.Json`:
+Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas `System.Text.Json`prises en charge dans, vous `Newtonsoft.Json`pouvez revenir à:
 
-1. Installer le [Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) package NuGet.
-1. Sur le client, chaîner une `AddNewtonsoftJsonProtocol` appel de méthode à la `HubConnectionBuilder` instance :
+1. Installez le package NuGet [Microsoft. AspNetCore. signalr. Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
+1. Sur le client, chaînez `AddNewtonsoftJsonProtocol` un appel de méthode `HubConnectionBuilder` à l’instance:
 
     ```csharp
     new HubConnectionBuilder()
@@ -522,13 +524,13 @@ Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas pris 
         .Build();
     ```
 
-1. Sur le serveur, chaîner une `AddNewtonsoftJsonProtocol` appel de méthode à la `AddSignalR` appel de méthode dans `Startup.ConfigureServices`:
+1. Sur le serveur, chaînez `AddNewtonsoftJsonProtocol` un appel de méthode `AddSignalR` à l’appel `Startup.ConfigureServices`de méthode dans:
 
     ```csharp
     services.AddSignalR()
         .AddNewtonsoftJsonProtocol(...);
     ```
 
-## <a name="opt-in-to-runtime-compilation"></a>S’abonner à la compilation pour le runtime
+## <a name="opt-in-to-runtime-compilation"></a>Accepter la compilation au moment de l’exécution
 
-Dans 3.0, la compilation pour le runtime est un scénario opt-in. Pour activer la compilation pour le runtime, consultez https://docs.microsoft.com/aspnet/core/mvc/views/view-compilation?view=aspnetcore-3.0#runtime-compilation.
+Dans 3,0, la compilation du runtime est un scénario d’abonnement. Pour activer la compilation au moment https://docs.microsoft.com/aspnet/core/mvc/views/view-compilation?view=aspnetcore-3.0#runtime-compilation de l’exécution, consultez.
