commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: tdykstra
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: tdykstra
 ms.custom: mvc
-ms.date: 07/29/2019
+ms.date: 08/05/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 4e20e4248957e3db796c7bbf85baf94fa263955b
-ms.sourcegitcommit: 7001657c00358b082734ba4273693b9b3ed35d2a
+ms.openlocfilehash: 6312feb05cc917dd28e40b01f51a5fbf31c59e37
+ms.sourcegitcommit: 2eb605f4f20ac4dd9de6c3b3e3453e108a357a21
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 07/31/2019
-ms.locfileid: "68670059"
+ms.lasthandoff: 08/06/2019
+ms.locfileid: "68819888"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -168,9 +168,9 @@ Conseils généraux:
 
 * Ajoutez `UseRouting`. 
 * Si l’application appelle `UseStaticFiles`, placez `UseStaticFiles` -la **avant** `UseRouting`.
-* Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization` appel à et **après** `UseRouting`.
-* Si l’application utilise des fonctionnalités [cors](xref:security/cors) , telles `[EnableCors]`que, `UseCors` placer suivant.
+* Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization` appel à et **après** `UseRouting` (et **après** `UseCors` l’utilisation de l’intergiciel (middleware) cors).
 * Remplacez `UseMvc` ou `UseSignalR` par .`UseEndpoints`
+* Si l’application utilise des scénarios [cors](xref:security/cors) , tels `[EnableCors]`que, placez l’appel `UseCors` à avant tout autre intergiciels qui utilise cors (par exemple, `UseCors` placez `UseAuthentication`avant `UseAuthorization`, et `UseMvc`).
 
 Voici un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard:
 
@@ -203,12 +203,13 @@ public void Configure(IApplicationBuilder app)
     ...
 
     app.UseStaticFiles();
-    
+
     app.UseRouting();
+
+    app.UseCors();
 
     app.UseAuthentication();
     app.UseAuthorization();
-    app.UseCors();
 
     app.UseEndpoints(endpoints =>
     {
