commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: tdykstra
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: tdykstra
 ms.custom: mvc
-ms.date: 08/05/2019
+ms.date: 08/17/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 6312feb05cc917dd28e40b01f51a5fbf31c59e37
-ms.sourcegitcommit: 2eb605f4f20ac4dd9de6c3b3e3453e108a357a21
+ms.openlocfilehash: 3d93526d609da4f216d0ec943f24c542341c49fb
+ms.sourcegitcommit: 38cac2552029fc19428722bb204ff9e16eb94225
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 08/06/2019
-ms.locfileid: "68819888"
+ms.lasthandoff: 08/18/2019
+ms.locfileid: "69573125"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -171,6 +171,7 @@ Conseils généraux:
 * Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization` appel à et **après** `UseRouting` (et **après** `UseCors` l’utilisation de l’intergiciel (middleware) cors).
 * Remplacez `UseMvc` ou `UseSignalR` par .`UseEndpoints`
 * Si l’application utilise des scénarios [cors](xref:security/cors) , tels `[EnableCors]`que, placez l’appel `UseCors` à avant tout autre intergiciels qui utilise cors (par exemple, `UseCors` placez `UseAuthentication`avant `UseAuthorization`, et `UseMvc`).
+* Remplacez `IHostingEnvironment` `using` `Microsoft.Extensions.Hosting` par `IWebHostEnvironment` et ajoutez une instruction pour l’espace de noms.
 
 Voici un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard:
 
